--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/3-column-preview-card/stylesheet/styles.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheet/styles.css">
 </head>
 <body>
     <div class="main-container">
@@ -13,7 +13,7 @@
             <div class="icon-container">
                 <img 
                 class="icon" 
-                src="/3-column-preview-card/images/icon-sedans.svg"
+                src="./images/icon-sedans.svg"
                 alt="sedans-icon">
             </div>
             <div class="text-container">
@@ -29,7 +29,7 @@
             <div class="icon-container">
                 <img 
                 class="icon" 
-                src="/3-column-preview-card/images/icon-suvs.svg"
+                src="./images/icon-suvs.svg"
                 alt="suvs-icon">                
             </div>
             <div class="text-container">
@@ -45,7 +45,7 @@
             <div class="icon-container">
                 <img 
                 class="icon" 
-                src="/3-column-preview-card/images/icon-luxury.svg"
+                src="./images/icon-luxury.svg"
                 alt="luxury-icon">
             </div>
             <div class="text-container">
